<?php
require_once 'Order.php';
require_once 'Car.php';

class Customer extends User
{

    private function buyCar()
    {

    }
}