<?php
require_once "Order.php";

class Order extends MyController
{

    private function checkOut()
    {

    }

    private function payment()
    {

    }
}

