<?php
require_once 'Order.php';
require_once 'Car.php';

class Seller extends User
{
    private function sellCar()
    {

    }

}

