@startuml
 class CarSku {
  + Car id : Int
  + Engine id : Int
  + Body id : Int
  + Price : Double
  + Inventory : Int
  + addCar()
  + editCar()
  + deleteCar()
  + searchCar()
 }

 class Car {
  + Brand : String
  + Name : String
  + Image : String
  + Description ：String
 }

 class Engine{
  - capacity : float
  - numberOfCylinders: Int
 }
 class Body{
  - numberOfDoors: Int
 }
 class FuelType{
  - fuelType: String
 }

 class User {
  + Username : String
  + Password : String
  + Name : String
  + City : String
  + Address : String
  + Mobile : String
  + Email : String
  + Gender : String
  + BOD : Bigint
  + CreateTime : Bigint
  + EditTime : Bigint
  # login()
  # addProfile()
  # getProfile()
  # updateProfile()
 }

 class Seller{
    - User ID : Int
    - SSN : Int
    - ManagerSSN : Int
    - sellCar()
 }

 class Customer{
    - User ID : Int
    - buyCar()
 }

 class Order{
    +Customer id : Int
    +Seller id  : Int
    +CarSku id  : Int
    + CreateTime : Bigint
    + EditTime : Bigint
    -checkOut()
    -payment()
 }


 User <|-- Seller : is kind of
 User <|-- Customer : is kind of
 CarSku o-- Car
 CarSku o-- Engine
 CarSku o-- Body
 CarSku o-- FuelType
 Order o-- Seller
 Order o-- Customer
 Order o-- CarSku

@enduml